--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body class="bg-gradient-to-r  from-[#000000] via-[#33033d] to-[#000000] ">
+  <body class="bg-gradient-to-r  from-[#0b0716] to-[#010101]">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
